--- a/reacts-app/package.json
+++ b/reacts-app/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "sass": "^1.69.0",
